<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgCadastrarbtnVoltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back"
        />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/linearCadastrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/author"
        android:text="@string/cadastrar"
        android:textSize="25sp" />

    <!-- Cadastrar e-mail !-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCadastrarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/e_mail"
        app:startIconContentDescription="@string/icone_de_pessoa"
        app:startIconDrawable="@drawable/baseline_person">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirmar e-mail !-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCadastrarConfirmarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/confirmar_e_mail"
        app:startIconContentDescription="@string/icone_de_pessoa"
        app:startIconDrawable="@drawable/baseline_person">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Cadastrar senha !-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCadastrarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/senha"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="@string/icone_de_cadeado"
        app:startIconDrawable="@drawable/baseline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirmar senha !-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCadastrarConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/confirmar_senha"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="@string/icone_de_cadeado"
        app:startIconDrawable="@drawable/baseline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLoginEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/criar_conta_cadastro" />

</LinearLayout>
</LinearLayout>