<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearCadastrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgEsqSenhabtnVoltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back"
        />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/author"
            android:text="Recuperar conta"
            android:textSize="25sp" />

        <!-- Cadastrar e-mail !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCadastrarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/e_mail"
            app:startIconContentDescription="@string/icone_de_pessoa"
            app:startIconDrawable="@drawable/baseline_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insira o e-mail da sua conta"
            android:fontFamily="@font/authorregular"
            android:layout_marginTop="5sp"/>

        <Button
            android:id="@+id/btnEsqSenhaEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enviar" />

    </LinearLayout>
</LinearLayout>